# docs/swagger.yml
@@ -1071,6 +1071,52 @@ paths:
                     example: article successfully deleted!
         '404':
           description: Article not found
+  
+  /article/upload:
+    post:
+      tags:
+        - manage articles
+      summary: Upload image for article
+      description: Endpoint admin to upload an image
+      operationId: uploadArticleImage
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              required:
+                - image
+              properties:
+                image:
+                  type: string
+                  format: image
+                  description: Article image anda
+      security:
+        - Bearer: []
+      responses:
+        '200':
+          description: Upload successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: integer
+                    example: 200
+                  message:
+                    type: string
+                    example: article updated!
+                  data:
+                    type: object
+                    properties:
+                      image_url:
+                        type: string
+                        example: http://example.com/image.png
+        '400':
+          description: Invalid request data 
+
 
   /achievements:
     get:
